--- a/src/app/portafolio/landingpage/landingpage.component.html
+++ b/src/app/portafolio/landingpage/landingpage.component.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="assets/img/perfil_logo2.svg" alt="Bootstrap" width="60" height="35">
+        <img src="/assets/img/perfil_logo2.svg" alt="Imagen perfil" width="60" height="35">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
       <div class="row align-items-start">
         <!-- Imagen -->
         <div class="col">
-          <img src="../../../assets/img/perfil_logo2.svg" alt="Bootstrap" width="400" height="400">
+          <img src="assets/img/perfil_logo2.svg" alt="Bootstrap" width="400" height="400">
 
         </div>
         <!-- contenido -->
