img cambio de ruta

--- a/src/app/portafolio/landingpage/landingpage.component.html
+++ b/src/app/portafolio/landingpage/landingpage.component.html
@@ -49,7 +49,7 @@
       <div class="row align-items-start">
         <!-- Imagen -->
         <div class="col">
-          <img src="assets/img/perfil_logo2.svg" alt="Bootstrap" width="400" height="400">
+          <img src="assets/img/perfil_logo2.svg"  alt="Imagen perfil" width="400" height="400">
 
         </div>
         <!-- contenido -->
